crates/ts-doc/tests/snapshots/transform__types__complex_type_template.snap
---
source: tests/transform.rs
expression: "transform(\"index\", \"export type Foo = `${number}.${number} ${string}`;\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "string",
      "value": ""
    },
    {
      "type": "number",
      "value": null
    },
    {
      "type": "string",
      "value": "."
    },
    {
      "type": "number",
      "value": null
    },
    {
      "type": "string",
      "value": " "
    },
    {
      "type": "string",
      "value": null
    },
    {
      "type": "string",
      "value": ""
    },
    {
      "type": "template",
      "elements": [
        0,
        1,
        2,
        3,
        4,
        5,
        6
      ]
    },
    {
      "type": "alias",
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "value": 7,
      "typeParameters": [],
      "description": null,
      "access": null
    }
  ],
  "exports": {
    "Foo": 8
  },
  "export_all": []
}
